[test] Room 전체 정보 조회